--- a/optum/pom.xml
+++ b/optum/pom.xml
@@ -45,7 +45,14 @@
 	    <artifactId>poi</artifactId>
 	    <version>5.4.0</version>
 	</dependency>
-
+	
+	
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml-schemas -->
+	<dependency>
+	    <groupId>org.apache.poi</groupId>
+	    <artifactId>poi-ooxml-schemas</artifactId>
+	    <version>4.1.2</version>
+	</dependency>
 	
 	<dependency>
       <groupId>io.rest-assured</groupId>
